--- a/FiletrackAPI/FiletrackAPI.csproj
+++ b/FiletrackAPI/FiletrackAPI.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3"/>
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0-preview4.23342.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
