--- a/FiletrackAPI/FiletrackAPI.csproj
+++ b/FiletrackAPI/FiletrackAPI.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Aspose.Zip" Version="23.12.0" />
         <PackageReference Include="Azure.Storage.Blobs" Version="12.20.0-beta.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3"/>
         <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0-preview4.23342.2" />
